--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
             </div>
           </div>
 
-          <!-- FORMULAIRE: ATTENTION -> Ce formulaire est statique (HTML/CSS).
                Les attributs id et name sont prêts pour être capturés par JS. -->
           <form id="formEtudiant" class="mt-3">
             <div class="mb-2">
@@ -172,12 +171,6 @@
             <div class="d-grid">
               <button type="submit" class=" etudiantSub btn btn-primary">Ajouter étudiant</button>
             </div>
-
-            <!-- NOTE: Après ajout via JS, mettre à jour:
-                 - #listeEtudiants (ul)
-                 - #selectEtudiant (select)
-                 - #tableEtudiants tbody
-            -->
           </form>
         </div>
 
@@ -228,7 +221,7 @@
              <div class="mb-2">
               <label for="selectProfClass" class="form-label small fw-semibold">Classe</label>
               <select name="selectProfClass" id="selectProfClass" class="form-select" aria-labe>
-                <option value="Iggl">IGGL</option></option>
+                <!--Les options ici-->
                 </select>
             </div>
             <div class="row g-2 mb-2">
